--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "css-loader": "^1.0.1",
     "elm": "^0.19.0-bugfix2",
+    "node-sass": "^4.10.0",
+    "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1"
@@ -29,6 +31,8 @@
     "bootstrap": "^4.1.3",
     "elm-webpack-loader": "^5.0.0",
     "jquery": "^3.3.1",
+    "jquery-validation": "^1.19.0",
+    "jquery-validation-unobtrusive": "^3.2.11",
     "popper.js": "^1.14.3",
     "postcss-loader": "^3.0.0"
   }
